crates/sdk-derive/derive-core/src/snapshots/fluentbase_sdk_derive_core__sol_input__tests__sol_struct_to_rust_tokens.snap
---
source: crates/sdk-derive/derive-core/src/sol_input.rs
expression: formatted_code
---
#[derive(::fluentbase_sdk::codec::Codec, Debug, Clone, PartialEq, Eq)]
pub struct User {
    pub name: String,
    pub age: U256,
}
