crates/sdk-derive/derive-core/src/snapshots/fluentbase_sdk_derive_core__sol_input__tests__sol_to_rust_trait_full_surface.snap
---
source: crates/sdk-derive/derive-core/src/sol_input.rs
expression: formatted
---
pub trait IProgram {
    fn transfer(&mut self, to: Address, amount: U256) -> bool;
    fn balance_of(&self, owner: Address) -> U256;
}
