crates/sdk-derive/derive-core/src/snapshots/fluentbase_sdk_derive_core__sol_input__tests__sol_to_sol_client_nested_struct.snap
---
source: crates/sdk-derive/derive-core/src/sol_input.rs
expression: formatted
---
#[derive(::fluentbase_sdk::codec::Codec, Debug, Clone, PartialEq, Eq)]
pub struct Inner {
    pub x: U256,
}
#[derive(::fluentbase_sdk::codec::Codec, Debug, Clone, PartialEq, Eq)]
pub struct Outer {
    pub inner: Inner,
    pub note: String,
}
#[client(mode = "solidity")]
pub trait IProgram {
    #[state_mutability("view")]
    fn ping(&self, input: Outer) -> Outer;
}
